tests/baselines/reference/unusedLocalsStartingWithUnderscore.errors.txt
tests/cases/compiler/unusedLocalsStartingWithUnderscore.ts(6,9): error TS6133: '_' is declared but its value is never read.


==== tests/cases/compiler/unusedLocalsStartingWithUnderscore.ts (1 errors) ====
    for (const _ of []) { }
    
    for (const _ in []) { }
    
    namespace M {
        let _;
            ~
!!! error TS6133: '_' is declared but its value is never read.
        for (const _ of []) { }
    
        for (const _ in []) { }
    }
        